--- a/src/Components/res.css
+++ b/src/Components/res.css
@@ -51,6 +51,11 @@
     font-size: 19px;
 }
 
+.content__experience{
+    font-size: 15px;
+    padding: 10px;
+}
+
 #Page_Content{
     background-color: rgb(207, 214, 187);
     height:100%;
@@ -78,12 +83,20 @@
 
 .companyExp{
     display:flex;
-    flex-wrap: wrap;
+    /* flex-wrap: nowrap; */
+    font-family: 'Love Ya Like A Sister', cursive;
     margin-bottom: 20px;
+    text-align: left;
 }
 
 .companyExp img{
     width: 60px;
+    height: 60px;
     border-radius: 5px;
-    margin-right: 30px;
+    margin-right: 15px;
+}
+
+.companyExp > div > strong{
+    font-weight: normal;
+    font-size: 18px;
 }
